# diagnostic_render

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: diagnostic.rs  file.rs  lib.rs
src/render/: calculate.rs  color.rs  data.rs  mod.rs
src/render/calculate/: mod.rs
src/render/calculate/tests/: ending.rs  mod.rs  singleline.rs  starting.rs  vertical_offset.rs
src/render/calculate/tests/vertical_offset/: mod.rs
src/render/tests/: ending.rs  mod.rs  singleline.rs  starting.rs
src/render/tests/snapshots/: diagnostic_render__render__tests__ending__1.snap  diagnostic_render__render__tests__ending__2.snap  diagnostic_render__render__tests__ending__overlapping_1.snap  diagnostic_render__render__tests__fibonacci.snap  diagnostic_render__render__tests__header_1.snap  diagnostic_render__render__tests__singleline__1.snap  diagnostic_render__render__tests__singleline__overlapping_1.snap  diagnostic_render__render__tests__singleline__same_line_1.snap  diagnostic_render__render__tests__singleline__separate_lines_1.snap  diagnostic_render__render__tests__starting__1.snap  diagnostic_render__render__tests__starting__simple_1.snap  diagnostic_render__render__tests__starting__with_ending_1.snap
