[package]
name = "source_diagnostic_render"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = { version = "1.2.0" }

[features]
# No need for a "color" feature, as the library user is responsible for adding colors
