[package]
name = "diagnostic_render"
version = "0.1.0"
edition = "2021"
description = "a library for printing formatted diagnostics like error messages and warnings, intended for use in compilers"
readme = "README.md"
repository = "https://github.com/mschae23/diagnostic_render"
license = "MIT"
keywords = [ "compiler", "diagnostic", "error", "formatter", "renderer" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = { version = "1.2.0" }

[features]
# No need for a "color" feature, as the library user is responsible for adding colors
